@@ -724,8 +724,8 @@ AC_CHECK_TYPES([pid_t], [], [], [#if HAVE_SYS_TYPES_H
 #endif])
 
 # check functions
-AC_CHECK_FUNCS([getdtablesize memcpy memset strchr strcspn strerror strrchr \
-	        wait3 wait4 waitpid])
+AC_CHECK_FUNCS([getdtablesize memcpy memset random strchr strcspn strerror \
+		strrchr wait3 wait4 waitpid])
 AC_FUNC_SETPGRP
 
 # Is the wait(2) status an int or union
