@@ -46,7 +46,6 @@ struct private_data {
  *
  * Return 0 if data->status is valid, otherwise 1
  */
-
 int
 default_v0_fn(struct authen_data *data)
 {
@@ -118,10 +117,10 @@ default_v0_fn(struct authen_data *data)
     passwd = p->password;
 
     if (!passwd[0]) {
-
-	/* no password yet. Either we need to ask for one and expect to get
-	 * called again, or we asked but nothing came back, which is fatal */
-
+	/*
+	 * no password yet. Either we need to ask for one and expect to get
+	 * called again, or we asked but nothing came back, which is fatal
+	 */
 	switch (p->state) {
 	case STATE_AUTHEN_GETPASS:
 	    /* We already asked for a password. This should be the reply */
