@@ -55,6 +55,8 @@
 # include <stdint.h>
 #endif
 
+#define MD5_SIZE	16
+
 /* typedef a generic pointer type */
 typedef unsigned char *POINTER;
 
