@@ -1,12 +1,12 @@
 .\"
 .hys 50
-.TH "tac_pwd" "8" "28 November 2009"
+.TH "tac_pwd" "8" "23 March 2012"
 .SH NAME
-tac_pwd \- generate DES encryption of a password
+tac_pwd \- generate DES or MD5 encryption of a password
 .\"
 .SH SYNOPSIS
 .B tac_pwd
-[\fB\-eh\fP]
+[\fB\-ehm\fP]
 [\c
 salt]
 .\"
@@ -27,6 +27,11 @@ Do not echo the plain-text password to the terminal.
 .TP
 .B \-h
 Display help message.
+.\"
+.TP
+.B \-m
+Generate an MD5 encryption, instead of DES.
+This only works if crypt() on your host supports MD5.
 .\"
 .SH "SEE ALSO"
 .BR crypt (3),
